refactor: replace hardcoded charset strings with StandardCharsets constants